--- a/src/app/modules/admin/containers/add-variables/add-variables.component.scss
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.scss
@@ -16,7 +16,10 @@
     align-self: center;
   }
   .add-variable {
-    width: 760px;
+    box-sizing: content-box;
+    width: 100%;
+    max-width: 760px;
+    padding-left: 211px;
     display: flex;
     flex-direction: column;
     margin: 0 250px;
@@ -79,7 +82,7 @@
       .add-variable__btn {
         font-size: 20px;
         align-self: flex-end;
-        margin-top: 30vh;
+        margin-top: 30px;
         width: 8.05em;
         height: 3.3em;
         background: $btn-confirm-bg;
@@ -133,9 +136,11 @@
       font-size: 30px;
     }
     .add-variable {
-      margin-left: 280px;
-      margin-right: 20px;
-      align-self: flex-start;
+      margin-left: 0;
+      margin-right: 0;
+      padding-left: 211px;
+      padding-right: 20px;
+      // align-self: flex-start;
       .add-variable__form {
         .add-variable__btn {
           font-size: 16px;
@@ -155,6 +160,7 @@
     .add-variable {
       margin-left: 220px;
       width: 500px;
+      padding-left: 0;
       .add-variable__form {
         .add-variable__input {
           width: auto;
