Style: cambia estilos de select
 cambia padding y margin de etiquetas internas del componente select de angular material para ser igual al propuesto en figma

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -14,7 +14,7 @@
         for="POST-variable"
         type="text"
         autocomplete="off"
-        >Nombre de Variable *</label
+        >Nombre de Variable</label
       >
       <div class="add-variable__container-input">
         <input
