--- a/src/app/modules/admin/containers/add-variables/add-variables.component.scss
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.scss
@@ -57,7 +57,7 @@
           color: $alert-text;
         }
       }
-      // nuevo selec de angular material----------------
+      // nuevo select de angular material----------------
       .mat-select {
         background: #fff;
         box-sizing: border-box;
@@ -96,12 +96,6 @@
           padding-right: 20px;
         }
       }
-
-      // .mat-select::-ms-expand {
-      //   display: none;
-      //   /*Evita que se muestre la flecha por defecto en versiones de IE*/
-      // }
-
       .mat-select::-moz-selection {
         background-color: #ffffff;
       }
@@ -128,6 +122,7 @@
     }
   }
 }
+// ESTILOS PARA CUSTOMIZAR EL SELECT DE ANGULAR MATERIAL----------
 ::ng-deep .mat-select-arrow-wrapper {
   display: flex !important;
   height: 56px !important;
@@ -137,6 +132,36 @@
   padding-left: 20px;
   font-weight: 400;
 }
+::ng-deep .cdk-overlay-container {
+  .select__option {
+    transition: all 0.2s linear;
+    &:hover {
+      background-color: $color-bg-hover-primary;
+    }
+    .mat-option-text:hover {
+      color: white;
+    }
+  }
+  .select__option.mat-selected:not(.mat-option-multiple) {
+    background: $color-bg-hover-primary;
+    .mat-option-text {
+      color: white;
+    }
+  }
+  .select__option.mat-selected:not(.mat-option-multiple):not(.mat-option-disabled) {
+    background: $color-bg-hover-primary;
+    .mat-option-text {
+      color: white;
+    }
+  }
+  .select__option.mat-active {
+    background: $color-bg-hover-primary;
+    .mat-option-text {
+      color: white;
+    }
+  }
+}
+//--------------------------------------------------------
 .modal-error {
   position: fixed;
   bottom: 20vh;
