--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,7 +95,7 @@ $mdp-pallet-accent: (
   200: #80bde0,
   300: #4da2d4,
   400: #268eca,
-  500: #007ac1,
+  500: #1967d2,
   600: #0072bb,
   700: #0067b3,
   800: #005dab,
