--- a/src/app/modules/admin/containers/add-variables/add-variables.component.scss
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.scss
@@ -97,6 +97,7 @@
         }
         .add-variable__info-text {
           margin-left: 15px;
+          margin-bottom: 0;
           font-family: "Roboto";
           font-size: 12px;
           color: rgba(0, 0, 0, 0.6);
