Refactor: quita alt de icono visualizar

--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -40,7 +40,7 @@
                     <div class="list-reports__cell list-reports__cell--acction">
                         <a>
                             <img class="list-reports__ico-action"
-                                src="../../../../../assets/icons/arrows-angle-expand.svg" alt="Icono de vizualizar"
+                                src="../../../../../assets/icons/arrows-angle-expand.svg" 
                                 matTooltip="Vizualizar" />
                         </a>
                         <a (click)="edit(element)">
