--- a/src/app/modules/admin/containers/add-variables/add-variables.component.scss
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.scss
@@ -219,6 +219,8 @@
   .value-scale__conteiner-scale {
     font-size: 16px;
     display: flex;
+    margin-top: 10px;
+    margin-bottom: 5px;
     .value-scale__value {
       display: flex;
       //select de rango de escala de valores
@@ -265,8 +267,16 @@
   .value-scale__conteiner-tags {
     .value-scale__tag {
       .value-scale__label {
+        font-size: 14px;
+        padding-left: 8px;
+        padding-right: 15px;
       }
       .value-scale__input {
+        font-size: 14px;
+        width: 150px;
+        ::ng-deep .mat-form-field-flex {
+          padding-top: 0;
+        }
       }
     }
   }
